--- a/test/comikazewebscraper/pom.xml
+++ b/test/comikazewebscraper/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>jsoup</artifactId>
             <version>1.11.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.1</version>
+        </dependency>
     </dependencies>
 
 
