Migrated parts of DB from SQLITE to PostgreSQL. Implemented a test REST service: getComics. Tested and works

--- a/comiclysm/src/main/resources/application.properties
+++ b/comiclysm/src/main/resources/application.properties
@@ -1,6 +1,23 @@
+# Database connection configurations
+spring.datasource.url=jdbc:postgresql://localhost:5432/ComiclysmDB
+spring.datasource.username=postgres
+spring.datasource.password=postgres123
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url= jdbc:sqlite:memory:database/Comiclyzm
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.username = ""
-spring.datasource.password = ""
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLiteDialect
+
+#Keep connection alive while idle. Validation query is default query to keep connection alive
+spring.datasource.tomcat.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+
+# Spring JPA & Hibernate configurations
+spring.jpa.show-sql=true
+# Will validate the schema (not make any updates -- hopefully)
+spring.jpa.hibernate.ddl-auto=validate
+
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
