User can now save comics to their inventory

--- a/comiclysm/pom.xml
+++ b/comiclysm/pom.xml
@@ -50,6 +50,13 @@
 		</dependency>
 
 
+        <!-- Spring Session Dependency -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+        </dependency>
+
+
 	</dependencies>
 
 	<build>
