--- a/comiclysm/src/main/resources/application.properties
+++ b/comiclysm/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.validationQuery=SELECT 1
 # Spring JPA & Hibernate configurations
 spring.jpa.show-sql=true
 # Will validate the schema (not make any updates -- hopefully)
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
